# FreqForge

./: CMakeLists.txt  LICENSE  README.md
main/: CMakeLists.txt  main.c
main/input/: input.c  input.h
